testsuite/tests/primops/should_fail/all.T
test('LevPolyPtrEquality3', normal, compile_fail, [''])
